tests/fail/fail-printb.mc
/* Should be illegal to redefine */
void printb() {}
